Fix vertical spacing due to line height

--- a/src/app/gallery/image-container/image-container.component.sass
+++ b/src/app/gallery/image-container/image-container.component.sass
@@ -1,3 +1,6 @@
+.image-container
+  line-height: 1
+
 .loading-area
   height: 200px
   width: 300px
